welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: not enough arguments for method sleepIn: (weekday: Boolean, vacation: Boolean)Boolean.
Unspecified value parameters weekday, vacation.
	if (sleepIn() == true) {return true}
                   ^